2014/05/10 - 1.11 - Fenix - added SQLite compatibility
2015/03/24 - 1.12 - Fenix - adapted plugin for built-in release